sourceCompatibility = '11'
targetCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.7.18'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.18'
    implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.6.15'
    implementation project(":shared-models")
    compileOnly 'org.projectlombok:lombok:1.18.30'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.18'
    testImplementation 'io.projectreactor:reactor-test:3.4.27'
}
